fix: removendo elemento indesejado no front

--- a/src/views/faq.ejs
+++ b/src/views/faq.ejs
@@ -34,7 +34,7 @@
     </header>
 
     <main class="faq-container">
-      <<section class="faq-section">
+      <section class="faq-section">
         <h2>Funcionalidades Prontas</h2>
         <div class="faq-item">
           <h3>✅ Criar evento</h3>
